assets/css/style.css
@font-face {
  font-family: "Montserrat";
  src: url("./../font/Montserrat/Montserrat-Regular.ttf");
}
@font-face {
  font-family: "Montserrat";
  font-weight: bold;
  src: url("./../font/Montserrat/Montserrat-Bold.ttf");
}
@font-face {
  font-family: "Roboto";
  font-weight: bold;
  src: url("./../font/Roboto/Roboto-Bold.ttf");
}
@font-face {
  font-family: "Roboto";
  font-weight: normal;
  src: url("./../font/Roboto/Roboto-Regular.ttf");
}

@font-face {
  font-family: "avenir";
  src: url("/assets/font/avenir-font/Avenir\ Light.ttf");
}
@font-face {
  font-family: "kepler";
  src: url("/assets/font/Kepler/keplerstd-light.otf");
}
@font-face {
  font-family: "futura";
  src: url("/assets/font/futura/Futura\ Light.otf");
}
@font-face {
  font-family: "Questrial";
  src: url("/assets/font/Questrial/Questrial-Regular.ttf");
}

html, body {
  font-family: "Montserrat", sans-serif;
  overflow-x: hidden;
  overflow-y: scroll;
  min-height: auto !important;
  animation: fadeInAnimation ease 0.8s;
}
main {
  display: none;
}

@keyframes fadeInAnimation {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

/* Global Class Start */
.background-dark {
  background-color: rgba(0, 0, 0, 0.5);
}
.background-dark-thin {
  background-color: rgba(0, 0, 0, 0.3);
}

.txt-secondary {
  color: #b4b3b1;
}

.background-info {
  background-color: #e9f5fc;
}

.txt-secondary-solid {
  color: #696969;
}

.txt-primary {
  color: #54636b;
}

.background-secondary {
  background-color: #e8e8e8;
}

.background-gray {
  background-color: rgb(237, 237, 237);
}

h1,
h2,
h3,
h4,
h5 {
  font-family: "Montserrat", sans-serif;
}

a {
  text-decoration: none;
}

p {
  font-family: "Roboto", sans-serif;
  font-size: 18px;
}

.py-10 {
  padding: 100px 0px;
}

.w-55{
  width: 55%;
}
/* Global Class End */

/* Navbar Start */
.wrapper-menu {
  width: 43px;
  height: 43px;
  background-color: white;
  flex-direction: column;
  justify-content: space-between;
  cursor: pointer;
  transition: transform 330ms ease-out;
  display: none;
  padding: 5px;
  z-index: 1050;
}

.wrapper-menu.open {
  transform: rotate(-45deg);
}

.line-menu {
  background-color: #43aed1;
  border-radius: 5px;
  width: 100%;
  height: 5px;
}

.line-menu.half {
  width: 50%;
}

.line-menu.start {
  transition: transform 330ms cubic-bezier(0.54, -0.81, 0.57, 0.57);
  transform-origin: right;
}

.open .line-menu.start {
  transform: rotate(-90deg) translateX(2px);
}

.line-menu.end {
  align-self: flex-end;
  transition: transform 330ms cubic-bezier(0.54, -0.81, 0.57, 0.57);
  transform-origin: left;
}

.open .line-menu.end {
  transform: rotate(-90deg) translateX(-3px);
}

.mobile-nav {
  position: fixed;
  top: 0;
  left: 100%;
  width: 100%;
  min-height: 100vh;
  display: block;
  z-index: 1040;
  background-color: #43aed1;
  display: none;
  flex-direction: column;
  text-align: center;
  padding-top: 40px;
  transition: 0.4s;
}

.mobile-nav.is-active {
  left: 0;
}

.mobile-nav ul li {
  list-style: none;
  font-family: "futura", sans-serif;
  line-height: 70px;
  color: white;
  font-size: 20px;
}

.mobile-nav ul li a {
  color: white;
}

.mobile-nav ul li ul {
  display: none;
}

.arrow-dropdown {
  left: 131px;
  top: 2px;
  position: absolute;
  transition: 0.4s;
}

.arrow-dropdown.active {
  transform: rotate(180deg);
}

.item-nav {
  border-top: 4px solid #fff;
}

.link-nav {
  font-weight: 400;
  color: black;
  font-family: "Questrial", san;
}

.item-nav.active:hover,
.item-nav:hover {
  border-top: 4px solid #a9b2b6;
}

.item-nav.active {
  border-top: 4px solid #828e93;
}

.link-nav:hover,
.link-nav.active:hover {
  color: #a9b2b6;
}

.navigation {
  box-shadow: 1px 1px 4px #acabab;
}

.nav-navbar {
  width: 100%;
  justify-content: center;
}

.icon-user {
  width: 25px;
  height: 25px;
  background-color: rgb(177, 177, 177);
}

/* Navbar End */

.pagination-section {
  position: fixed;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  bottom: 35%;
  left: unset;
  right: 21px;
  font-size: 30px;
  z-index: 2;
}

.page-item {
  list-style-type: none;
}

.pagination-section li a {
  width: 12px;
  height: 12px;
  border: 2px solid #b5b5b5;
  margin-bottom: 28px;
  list-style-type: none;
  display: block;
}

.pagination-section li a.active,
.pagination-section li a:hover {
  background-color: #b5b5b5;
  transition: 0.3s;
}

/* Hero */
.hero {
  height: 900px;
}

.hero-body {
  height: 900px;
}

.hero-body h1 {
  font-size: 58px;
  margin-top: 100px;
  line-height: 75px;
}

.hero-body .description {
  width: 55%;
  font-size: 19px !important;
  line-height: 25px;
}

.wa-image {
  width: 65px;
  height: 65px;
}

.wa-image-wrapper {
  position: fixed;
  bottom: 80px;
  left: unset;
  right: 30px;
  width: 65px;
  height: 65px;
  border-radius: 50%;
  font-size: 30px;
  z-index: 100;
}

.dropdown-item {
  display: none;
  position: absolute;
  width: 170px;
  background-color: white;
  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
}

.item-nav:nth-child(4):hover .dropdown-item {
  display: block;
  background: white;
}

/* about */
.about-image {
  height: 100%;
}

.about-text-wrap {
  height: 700px;
}

.checklist-item span {
  font-family: "Roboto";
}

.about-text p {
  font-size: 18px;
}

.btn-start-now {
  padding: 11px 30px;
  letter-spacing: 2px;
  font-weight: bold !important;
  font-family: "Roboto", sans-serif;
  font-size: 18px;
  outline: 2px solid black;
  color: black;
  transition: 0.3s;
}

.btn-start-now:hover {
  background-color: #a9b2b6;
  color: white;
  outline-color: #a9b2b6;
}
.about-text-second h1 {
  width: 40%;
  line-height: 55px;
}

.about-text-second p {
  font-size: 18px;
}

.about .box-card {
  width: 100%;
  background-color: #fff;
}

.about .box-card img {
  width: 160px;
}
/* ... */

